# fiosdk_kotlin

./: .gitignore  LICENSE  README.md  build.gradle  local.properties  request_funds_workflow.md  settings.gradle
androidfioserializationprovider/: build.gradle
androidfiosoftkeysignatureprovider/: build.gradle
androidfiosoftkeysignatureprovider/src/main/: AndroidManifest.xml
app/: build.gradle
app/src/main/: AndroidManifest.xml
coinomifioserializationprovider/: README.md  build.gradle
coinomifioserializationprovider/src/main/ios/cpp/: CMakeLists.txt
coinomifioserializationprovider/src/main/ios/cpp/old/: CMakeLists.txt
coinomiserializationprovider/: README.md
documentation/fiosdk/: index-outline.html  index.html  package-list
documentation/fiosdk/alltypes/: index.html
documentation/fiosdk/fiofoundation.io.androidfioserializationprovider/: index.html
documentation/fiosdk/fiofoundation.io.fiosdk.enums/: index.html
documentation/fiosdk/fiofoundation.io.fiosdk.errors/: index.html
documentation/fiosdk/fiofoundation.io.fiosdk.errors.abiprovider/: index.html
documentation/fiosdk/fiofoundation.io.fiosdk.errors.fionetworkprovider/: index.html
documentation/fiosdk/fiofoundation.io.fiosdk.errors.formatters/: index.html
documentation/fiosdk/fiofoundation.io.fiosdk.errors.serializationprovider/: index.html
documentation/fiosdk/fiofoundation.io.fiosdk.errors.session/: index.html
documentation/fiosdk/fiofoundation.io.fiosdk.errors.signatureprovider/: index.html
documentation/fiosdk/fiofoundation.io.fiosdk.formatters/: index.html
documentation/fiosdk/fiofoundation.io.fiosdk.implementations/: index.html
documentation/fiosdk/fiofoundation.io.fiosdk.interfaces/: index.html
fiosdk/: build.gradle
fiosdk/src/main/: AndroidManifest.xml
fioserializationprovider/: README.md  build.gradle
gradle/wrapper/: gradle-wrapper.properties
javafioserializationprovider/: build.gradle
javaserializationprovider/: README.md  build.gradle
(+1357 files in other folders)
